--- a/app/javascript/packs/app-styles.sass
+++ b/app/javascript/packs/app-styles.sass
@@ -1,4 +1,6 @@
+$border-radius-base: 0
 @import '~bootstrap-sass/assets/stylesheets/bootstrap'
+@import '~font-awesome/scss/font-awesome'
 
 body
   padding: 70px 0 0
