--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -1,17 +1,15 @@
 <ul class="nav navbar-nav navbar-right">
-  <li><%= link_to 'Users', users_path %></li>
-  <!--<% if user_signed_in? %>-->
-      <!--<% if current_user.try(:admin?) %>-->
-          <!--<li><%= link_to 'Users', users_path %></li>-->
-      <!--<% end %>-->
-  <!--<% end %>-->
   <% if user_signed_in? %>
-      <!--<li><%= link_to 'Редактировать аккаунт', edit_user_registration_path %></li>-->
-      <li><%= link_to current_user.email, edit_user_path(current_user) %></li>
-      <li><%= link_to 'Выйти', destroy_user_session_path, :method => 'delete' %></li>
+    <!--<li><%= link_to 'Редактировать аккаунт', edit_user_registration_path %></li>-->
+    <%- if current_user.image.present? %>
+      <li><%= image_tag current_user.image, class: 'responsive' %></li>
+    <% end %>
+    <li><%= link_to current_user.name.present? ? current_user.name : current_user.email, edit_user_path(current_user) %></li>
+    <li><%= link_to 'Выйти', destroy_user_session_path, :method => 'delete' %></li>
   <% else %>
-      <li><%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></li>
-      <li><%= link_to 'Войти', new_user_session_path %></li>
-      <li><%= link_to 'Зарегистрироваться', new_user_registration_path %></li>
+    <li><%= link_to "", user_facebook_omniauth_authorize_path, class: 'fa fa-facebook-official fa-2x fa-fw' %></li>
+    <li><%= link_to "", user_facebook_omniauth_authorize_path, class: 'fa fa-vk fa-2x fa-fw' %></li>
+    <li><%= link_to 'Войти', new_user_session_path %></li>
+    <li><%= link_to 'Зарегистрироваться', new_user_registration_path %></li>
   <% end %>
 </ul>
