--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,1 +1,6 @@
-<%# add navigation links to this file %>
+<% if user_signed_in? %>
+  <% if current_user.try(:admin?) %>
+    <li><%= link_to 'Users', users_path %></li>
+  <% end %>
+  <li><%= link_to "Заполнить анкету", edit_user_path(current_user) %></li>
+<% end %>
