--- a/app/views/header/_navigation.html.slim
+++ b/app/views/header/_navigation.html.slim
@@ -1,14 +1,15 @@
 / navigation styled for Bootstrap 3.0
-nav.navbar-default.navbar-fixed-top
-  .container-fluid
+nav.navbar.navbar-inverse
+  .container
     .navbar-header
       button.navbar-toggle[type="button" data-toggle="collapse" data-target=".navbar-collapse"]
         span.sr-only Toggle navigation
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      = link_to 'Miss Travel Russia', root_path, class: 'navbar-brand'
+      = link_to root_path, class: 'navbar-brand' do
+        =image_tag asset_pack_path 'logo.svg'
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        == render 'layouts/navigation_links'
-      = render 'layouts/nav_links_for_auth'
+        == render 'header/navigation_links'
+      = render 'header/nav_links_for_auth'
