--- a/app/views/header/_navigation_links.html.erb
+++ b/app/views/header/_navigation_links.html.erb
@@ -2,5 +2,5 @@
   <% if current_user.try(:admin?) %>
     <li><%= link_to 'Users', users_path %></li>
   <% end %>
-  <li><%= link_to "Заполнить анкету", edit_user_path(current_user) %></li>
+  <li><%= link_to 'Выйти', destroy_user_session_path, :method => 'delete' %></li>
 <% end %>
