--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,12 +5,13 @@ html
     title== content_for?(:title) ? yield(:title) : 'Rails Devise Pundit'
     == csrf_meta_tags
     meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Rails Devise Pundit'}"
+    link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:300,400,500,700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet"
     == stylesheet_link_tag 'application'
     == stylesheet_pack_tag 'app-styles'
     == javascript_include_tag 'application'
     == javascript_pack_tag 'application'
   body
-    == render 'layouts/navigation'
-    .container-fluid
+    == render 'header/header'
+    .container
       == render 'layouts/messages'
       == yield
