--- a/app/javascript/packs/app-styles.scss
+++ b/app/javascript/packs/app-styles.scss
@@ -1,4 +1,4 @@
-$font-family-sans-serif: 'Roboto', sans-serif;
+$font-family-sans-serif: 'Lucida Grande', sans-serif;
 $font-family-serif: 'Roboto Slab', serif;
 
 $container-large-desktop: 1230px;
@@ -10,6 +10,7 @@ $navbar-inverse-bg: rgba(0, 0, 0, .6);
 $navbar-inverse-link-color: #fff;
 $navbar-inverse-link-hover-color: #ffcc00;
 
+@import "fonts/stylesheet";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 @import "~font-awesome/scss/font-awesome";
 
