--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -1,2 +1,12 @@
 header
   == render 'header/navigation'
+  h1.header-title Голосуй за Miss Travel!
+  -unless user_signed_in?
+    .b-sign-in
+      .b-sign-in-lebel Войти через социальнуюсь сеть
+      .b-sign-in-buttons
+        = link_to user_facebook_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-fb' do
+          =image_tag asset_pack_path 'login-fb.svg'
+        = link_to user_facebook_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-vk' do
+          i.fa.fa-vk.fa-fw
+          span VKONTAKTE
