--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,7 +5,7 @@ html
     title== content_for?(:title) ? yield(:title) : 'Rails Devise Pundit'
     == csrf_meta_tags
     meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Rails Devise Pundit'}"
-    link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:300,400,500,700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet"
+    link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet"
     == stylesheet_link_tag 'application'
     == stylesheet_pack_tag 'app-styles'
     == javascript_include_tag 'application'
