--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -2,6 +2,14 @@
 <p>Find me in app/views/catalog/index.html.erb</p>
 
 <% if user_signed_in? %>
-    <%= current_user.email %>
-    <%= current_user.admin? %>
+  <%= current_user.email %>
+  <%= current_user.admin? %>
 <% end %>
+
+
+<div class="fb-like"
+     data-href="http://127.0.0.1:4000/your-page.html"
+     data-layout="standard"
+     data-action="like"
+     data-show-faces="true">
+</div>
