--- a/deploy/roles/nginx/templates/nginx-http.j2
+++ b/deploy/roles/nginx/templates/nginx-http.j2
@@ -9,11 +9,7 @@ server {
         try_files $uri $uri/ =404;
     }
 
-    #try_files $uri/index.html $uri.html $uri @{{ domain_name }};
-
     location / {
-      root /var/www/letsencrypt/;
-      index index.html;
-      #rewrite ^ https://{{ domain_name }}$request_uri? permanent;
+      rewrite ^ https://{{ domain_name }}$request_uri? permanent;
     }
 }
