--- a/deploy/roles/nginx/templates/nginx-le.j2
+++ b/deploy/roles/nginx/templates/nginx-le.j2
@@ -1,3 +1,7 @@
+upstream mysite {
+  server unix://{{ app_path }}/shared/tmp/sockets/puma.sock fail_timeout=0;
+}
+
 add_header X-Frame-Options SAMEORIGIN;
 add_header X-Content-Type-Options nosniff;
 add_header X-XSS-Protection "1; mode=block";
@@ -26,10 +30,45 @@ server {
     ssl_dhparam /etc/nginx/dhparams.pem;
     ssl_prefer_server_ciphers on;
 
-    root /var/www/{{ domain_name }};
-    index index.html index.htm;
+    root {{ app_path }}/current/public;
+    # root /var/www/{{ domain_name }};
+    # index index.html index.htm;
+
+    location ~ ^/assets/ {
+          expires max;
+          gzip_static on;
+          gzip_vary on;
+          add_header Cache-Control public;
+          break;
+    }
+
+    location ~ ^/system/ {
+        expires max;
+        gzip_static on;
+        gzip_vary on;
+        add_header Cache-Control public;
+        break;
+    }
 
     location / {
-        try_files $uri $uri/ =404;
+        proxy_pass http://mysite; # match the name of upstream directive which is defined above
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    location ~ ^/(500|404|422).html {
+        root {{ app_path }}/current/public;
+    }
+
+
+    error_page 500 502 503 504 /500.html;
+    error_page 404 /404.html;
+    error_page 422 /422.html;
+
+    client_max_body_size 4G;
+    keepalive_timeout 10;
+
+    #location / {
+    #    try_files $uri $uri/ =404;
+    #}
 }
