--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,17 +31,17 @@
     });
     FB.AppEvents.logPageView();
 
-    FB.ui({
-      method: 'like',
-      action_type: 'og.likes',
-      href: "http://127.0.0.1:4000",
+//    FB.ui({
+//      method: 'like',
+//      action_type: 'og.likes',
+//      href: "http://127.0.0.1:4000",
 //      action_properties: JSON.stringify({
 //        object:'http://127.0.0.1:4000',
 //      })
-    }, function(response){
-      // Debug response (optional)
-      console.log(response);
-    });
+//    }, function(response){
+//      // Debug response (optional)
+//      console.log(response);
+//    });
   };
 
   (function(d, s, id){
