--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,38 +24,40 @@
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId            : '1716823038621169',
-      autoLogAppEvents : true,
-      xfbml            : true,
-      version          : 'v2.10'
+      appId: '1716823038621169',
+      autoLogAppEvents: true,
+      xfbml: true,
+      version: 'v2.10',
     });
     FB.AppEvents.logPageView();
 
-//    FB.ui({
-//      method: 'like',
-//      action_type: 'og.likes',
-//      href: "http://127.0.0.1:4000",
-//      action_properties: JSON.stringify({
-//        object:'http://127.0.0.1:4000',
-//      })
-//    }, function(response){
-//      // Debug response (optional)
-//      console.log(response);
-//    });
+    //    FB.ui({
+    //      method: 'like',
+    //      action_type: 'og.likes',
+    //      href: "http://127.0.0.1:4000",
+    //      action_properties: JSON.stringify({
+    //        object:'http://127.0.0.1:4000',
+    //      })
+    //    }, function(response){
+    //      // Debug response (optional)
+    //      console.log(response);
+    //    });
   };
 
-  (function(d, s, id){
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) {return;}
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/sdk.js";
+  (function(d, s, id) {
+    var js,
+        fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) {
+      return;
+    }
+    js = d.createElement(s);
+    js.id = id;
+    js.src = '//connect.facebook.net/en_US/sdk.js';
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));
 </script>
 <%== render 'header/header' %>
-<div class="container">
-  <%== render 'layouts/messages' %>
-  <%== yield %>
-</div>
+<%== render 'layouts/messages' %>
+<%== yield %>
 </body>
 </html>
