--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,31 @@
+<div class="profile">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <%- @user.photos.each do |photo| %>
+          <div>
+            <%= image_tag photo.photo_src.thumb, class: "media-object img-responsive img-thumbnail" %>
+          </div>
+        <% end %>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+
+        <div class="profile-created">
+          <div class="profile-created-data">
+            <span class="text-muted">Дата размещения анкеты:</span>
+            <%= current_user.created_at.strftime("%d.%m.%Y") %>
+          </div>
+          <%= link_to edit_user_path(current_user), class: 'profile-edit-link' do %>
+            <span class="profile-edit-link__label">Редактировать</span>
+            <i class="fa fa-cog" aria-hidden="true"></i>
+          <% end %>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="row">
   <div class="col-lg-4 col-lg-offset-4">
     <div class="panel panel-default">
@@ -40,11 +68,6 @@
       Загрузка фото
       <%= @user.email %>
     </h4>
-    <%- @user.photos.each do |photo| %>
-      <div>
-        <%= image_tag photo.photo_src.thumb, class: "media-object img-responsive img-thumbnail" %>
-      </div>
-    <% end %>
   </div>
   <div class="panel-body">
     <%= simple_form_for @user, :url => members_upload_path, :method => :post do |f| %>
