--- a/app/javascript/packs/app-styles.scss
+++ b/app/javascript/packs/app-styles.scss
@@ -10,14 +10,21 @@ $navbar-inverse-bg: rgba(0, 0, 0, .6);
 $navbar-inverse-link-color: #fff;
 $navbar-inverse-link-hover-color: #ffcc00;
 
+$text-color: #000000;
+$text-muted: #666666;
+
+$font-size-base: 16px;
+
 @import "fonts/stylesheet";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 @import "~font-awesome/scss/font-awesome";
 
 @import "header";
+@import "profile";
 
+.alert{
+	margin: 15px 0;
+}
 body {
 	padding: 0;
-	//font-family: 'Roboto', sans-serif;
-	//font-family: 'Roboto Slab', serif;
 }
