--- a/app/javascript/packs/_profile.scss
+++ b/app/javascript/packs/_profile.scss
@@ -1,3 +1,4 @@
+@import "vars";
 .profile {
 	margin: 0 0 60px;
 	padding: 60px 0 40px;
@@ -24,4 +25,8 @@
 .profile-edit-link__label{
 	font-size: 14px;
 	border-bottom: 1px dashed $text-color;
+}
+
+.profile-job{
+
 }
