--- a/app/javascript/packs/app-styles.scss
+++ b/app/javascript/packs/app-styles.scss
@@ -1,20 +1,4 @@
-$font-family-sans-serif: 'Lucida Grande', sans-serif;
-$font-family-serif: 'Roboto Slab', serif;
-
-$container-large-desktop: 1230px;
-
-$border-radius-base: 4px;
-
-$navbar-height: 90px;
-$navbar-inverse-bg: rgba(0, 0, 0, .6);
-$navbar-inverse-link-color: #fff;
-$navbar-inverse-link-hover-color: #ffcc00;
-
-$text-color: #000000;
-$text-muted: #666666;
-
-$font-size-base: 16px;
-
+@import "vars";
 @import "fonts/stylesheet";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 @import "~font-awesome/scss/font-awesome";
