--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,7 +15,10 @@
           <%= f.input :position %>
           <%= f.input :work_experience %>
           <%= f.input :age %>
-          <%#= f.input :phone, as: :tel, pattern: "[0-9]{1} [0-9]{3} [0-9]{3}-[0-9]{2}-[0-9]{2}" %>
+          <%= f.input :phone,
+                      as: :tel,
+                      pattern: "+[0-9]{1} \s{1} [0-9]{3} \s{1} [0-9]{3}-[0-9]{2}-[0-9]{2}",
+                      placeholder: "+7 999 999-99-99" %>
           <%= f.button :submit %>
         <% end %>
       </div>
