--- a/app/javascript/packs/_vars.scss
+++ b/app/javascript/packs/_vars.scss
@@ -12,5 +12,6 @@ $navbar-inverse-link-hover-color: #ffcc00;
 
 $text-color: #000000;
 $text-muted: #666666;
-
+$link-color: #0054b9;
+$link-hover-color: lighten($link-color, 15%) !default;
 $font-size-base: 16px;
