--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
           </div>
           <%= link_to edit_user_path(current_user), class: 'profile-edit-link' do %>
             <span class="profile-edit-link__label">Редактировать</span>
-            <i class="fa fa-cog" aria-hidden="true"></i>
+            <i class="profile-edit-link__icon fa fa-cog" aria-hidden="true"></i>
           <% end %>
         </div>
 
@@ -27,12 +27,76 @@
           <span class="profile-organization">
             <%= current_user.organization %>
           </span>
-          <%= link_to current_user.organization_site, "//#{current_user.organization_site}", class: "profile-organization_link" %>
+          <%= link_to current_user.organization_site,
+                      "//#{current_user.organization_site}",
+                      target: "_blank",
+                      class: "profile-organization_link" %>
 
           <div class="text-muted">
             Стаж:
             <%= t('datetime.distance_in_words.x_years', count: current_user.work_experience, locale: :ru) %>
           </div>
+        </div>
+
+        <h1 class="profile-title">
+          <%= current_user.name %>
+        </h1>
+
+        <div class="profile-p">
+          <%= current_user.position %>
+        </div>
+
+        <div class="profile-p text-muted">
+          <%= t('datetime.distance_in_words.x_years', count: current_user.age, locale: :ru) %>
+        </div>
+
+        <div class="profile-pool-info">
+
+          <div class="profile-pool-info-block profile-pool-info-block__rating">
+            <div class="profile-pool-info-block-result">
+              33
+            </div>
+            <div class="profile-pool-info-block-text">
+              <span class="text-muted">
+                Ваш рейтинг
+              </span>
+            </div>
+          </div>
+
+          <div class="profile-pool-info-block profile-pool-info-block__rating">
+            <div class="profile-pool-info-block-result">
+              12293
+            </div>
+            <div class="profile-pool-info-block-text">
+              <%= image_tag asset_pack_path 'icon-like.svg' %>
+              <span class="text-muted">
+                Вас лайкнули
+              </span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="">
+          <div class="text-muted">
+            Скрытая информация, для связи администрации с участницой
+            <i class="fa fa-eye-slash" aria-hidden="true"></i>
+          </div>
+
+          <div class="profile-p" style="margin-top: 16px">
+            Телефон для связи
+          </div>
+          <div class="text-muted">
+            <%= current_user.phone %>
+          </div>
+
+          <div class="profile-p" style="margin-top: 16px">
+            Email
+          </div>
+          <div class="text-muted">
+            <%= current_user.email %>
+          </div>
+
         </div>
 
       </div>
