верстка информации о пользователе

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
         <div class="profile-created">
           <div class="profile-created-data">
             <span class="text-muted">Дата размещения анкеты:</span>
-            <%= current_user.created_at.strftime("%d.%m.%Y") %>
+            <%= current_user.created_at.present? && current_user.created_at.strftime("%d.%m.%Y") %>
           </div>
           <%= link_to edit_user_path(current_user), class: 'profile-edit-link' do %>
             <span class="profile-edit-link__label">Редактировать</span>
