--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,26 +1,27 @@
-<div class="row">
-  <div class="col-lg-4 col-lg-offset-4">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4>
-          Редактирование данных
-          <%= @user.name.present? ? @user.name : @user.email %>
-        </h4>
-      </div>
-      <div class="panel-body">
-        <%= simple_form_for @user do |f| %>
-          <%= f.input :name %>
-          <%= f.input :organization %>
-          <%= f.input :organization_site %>
-          <%= f.input :position %>
-          <%= f.input :work_experience %>
-          <%= f.input :age %>
-          <%= f.input :phone,
-                      as: :tel,
-                      pattern: "+[0-9]{1} \s{1} [0-9]{3} \s{1} [0-9]{3}-[0-9]{2}-[0-9]{2}",
-                      placeholder: "+7 999 999-99-99" %>
-          <%= f.button :submit %>
-        <% end %>
+<div class="profile">
+  <div class="row">
+    <div class="col-lg-6 col-lg-offset-3">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4>
+            Ваша анкета
+          </h4>
+        </div>
+        <div class="panel-body">
+          <%= simple_form_for @user do |f| %>
+            <%= f.input :name %>
+            <%= f.input :organization %>
+            <%= f.input :organization_site %>
+            <%= f.input :position %>
+            <%= f.input :work_experience %>
+            <%= f.input :age %>
+            <%= f.input :phone,
+                        as: :tel,
+                        pattern: "+[0-9]{1} \s{1} [0-9]{3} \s{1} [0-9]{3}-[0-9]{2}-[0-9]{2}",
+                        placeholder: "+7 999 999-99-99" %>
+            <%= f.button :submit %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
