--- a/app/javascript/packs/_profile.scss
+++ b/app/javascript/packs/_profile.scss
@@ -111,8 +111,11 @@
 	box-sizing: border-box;
 	width: 450px;
 	border-radius: 4px;
-	overflow: hidden;
 	border: 4px solid #ffcc00;
+
+	img{
+		border-radius: 1px;
+	}
 }
 
 .profile-photos-thumb {
@@ -125,8 +128,11 @@
 	box-sizing: border-box;
 	width: 141px;
 	margin: 4px 0;
-	overflow: hidden;
 	border-radius: 2px;
+
+	img{
+		border-radius: 2px;
+	}
 }
 
 .profile-photo-delete {
