--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,5 +59,6 @@
 <%== render 'header/header' %>
 <%== render 'layouts/messages' %>
 <%== yield %>
+<%== render 'layouts/footer' %>
 </body>
 </html>
