--- a/app/javascript/packs/_vars.scss
+++ b/app/javascript/packs/_vars.scss
@@ -15,3 +15,6 @@ $text-muted: #666666;
 $link-color: #0054b9;
 $link-hover-color: lighten($link-color, 15%) !default;
 $font-size-base: 16px;
+
+
+$brand-success:         #5cb85c !default;
