верстка информации о пользователе

--- a/app/views/header/_nav_links_for_auth.html.erb
+++ b/app/views/header/_nav_links_for_auth.html.erb
@@ -5,7 +5,7 @@
     <%- if current_user.image.present? %>
       <li>
         <%= link_to user_path(current_user), class: 'user-avatar' do %>
-          <%= image_tag current_user.image, class: 'img-responsive' %>
+          <%= image_tag current_user.image.gsub('http:', ''), class: 'img-responsive' %>
         <% end %>
       </li>
     <% end %>
