верстка информации о пользователе

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,6 +18,9 @@
                           } do %>
                 <i class="fa fa-trash-o" aria-hidden="true"></i>
               <% end %>
+              <div class="profile-photo-root-info">
+                Фото, которое будет отображаться в ленте
+              </div>
             </div>
           <% end %>
 
