--- a/app/javascript/packs/_profile.scss
+++ b/app/javascript/packs/_profile.scss
@@ -113,9 +113,20 @@
 	border-radius: 4px;
 	border: 4px solid #ffcc00;
 
-	img{
+	img {
 		border-radius: 1px;
 	}
+}
+
+.profile-photo-root-info {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	padding: 10px 15px;
+	color: #fff;
+	font-size: 14px;
+	background-color: rgba(0, 0, 0, .37);
 }
 
 .profile-photos-thumb {
@@ -130,7 +141,7 @@
 	margin: 4px 0;
 	border-radius: 2px;
 
-	img{
+	img {
 		border-radius: 2px;
 	}
 }
@@ -156,7 +167,7 @@
 	background: none !important;
 	border: none !important;
 
-	&:hover{
+	&:hover {
 		color: #fff;
 	}
 }
