верстка информации о пользователе

--- a/app/javascript/packs/_vars.scss
+++ b/app/javascript/packs/_vars.scss
@@ -4,6 +4,7 @@ $font-family-serif: 'Roboto Slab', serif;
 $container-large-desktop: 1230px;
 
 $border-radius-base: 4px;
+$btn-border-radius-large: 30px;
 
 $navbar-height: 90px;
 $navbar-inverse-bg: rgba(0, 0, 0, .6);
