--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -57,7 +57,7 @@ header {
 
 .header-title {
 	position: relative;
-	margin: 75px 0 55px;
+	margin: 75px 0;
 	z-index: 3;
 	font-family: 'Roboto Slab';
 	font-size: 76px;
@@ -65,6 +65,20 @@ header {
 	text-align: center;
 	color: #ffffff;
 	text-shadow: 0 4px 7px rgba(0, 0, 0, 0.27);
+}
+
+.header-buttons{
+	position: relative;
+	z-index: 3;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+
+	.btn{
+		margin: 0 16px;
+		padding-left: 32px;
+		padding-right: 32px;
+	}
 }
 
 .b-sign-in {
@@ -85,12 +99,14 @@ header {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	padding: 50px 0;
 }
 
 .b-sign-in-button {
 	vertical-align: top;
 	width: 210px;
 	height: 52px;
+	margin: 0 8px;
 	padding: 11px 0;
 	border-radius: 26px;
 	background-color: #3f51b5;
@@ -100,7 +116,6 @@ header {
 	text-align: center;
 }
 .b-sign-in-button-vk {
-	margin-left: 16px;
 	background-color: #4f719b;
 
 	.fa{
