--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,16 @@
-<div class="row">
-  <h3>Users</h3>
-  <div class="column">
-    <table class="table">
-      <tbody>
-      <% @users.each do |user| %>
+<div class="container container-body">
+  <div class="row">
+    <h3>Users</h3>
+    <div class="column">
+      <table class="table">
+        <tbody>
+        <% @users.each do |user| %>
           <tr>
             <%= render user %>
           </tr>
-      <% end %>
-      </tbody>
-    </table>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
