--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -44,6 +44,7 @@ header {
 				height: 90px;
 				padding-top: 29px;
 				padding-bottom: 29px;
+				padding-right: 0;
 
 				.img-responsive {
 					height: 32px;
