--- a/app/javascript/packs/_profile.scss
+++ b/app/javascript/packs/_profile.scss
@@ -2,9 +2,24 @@
 
 .profile {
 	margin: 0 0 60px;
-	padding: 60px 0 40px;
-	background-color: #fffaf3;
-	border-bottom: 7px solid #eff2f5;
+	padding: 0 0 40px;
+}
+
+.profile-heding {
+	display: flex;
+	justify-content: space-between;
+	margin: 32px 0 45px;
+	font-size: 20px;
+	text-align: left;
+	color: #000000;
+}
+
+.profile-container {
+	display: flex;
+}
+
+.profile-photos-col {
+	margin-right: 20px;
 }
 
 .profile-p {
@@ -107,11 +122,24 @@
 }
 
 .profile-photo-root {
+	box-sizing: border-box;
 	position: relative;
 	box-sizing: border-box;
 	width: 450px;
 	border-radius: 4px;
 	border: 4px solid #ffcc00;
+
+	&:before {
+		content: '';
+		position: absolute;
+		z-index: 1;
+		display: block;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background-color: rgba(0, 0, 0, .25);
+	}
 
 	img {
 		border-radius: 1px;
@@ -120,6 +148,7 @@
 
 .profile-photo-root-info {
 	position: absolute;
+	z-index: 2;
 	left: 0;
 	right: 0;
 	bottom: 0;
@@ -130,44 +159,54 @@
 }
 
 .profile-photos-thumb {
-	width: 141px;
 	margin-left: 4px;
 }
 
 .profile-photo {
 	position: relative;
 	box-sizing: border-box;
-	width: 141px;
-	margin: 4px 0;
-	border-radius: 2px;
+	width: 148px;
+	margin: 0 0 3px;
+	border-radius: 4px;
+
+	&:last-child {
+		margin: 0;
+	}
+
+	&:before {
+		content: '';
+		position: absolute;
+		z-index: 1;
+		display: block;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background-color: rgba(0, 0, 0, .25);
+		border-radius: 4px;
+	}
 
 	img {
-		border-radius: 2px;
+		border-radius: 4px;
 	}
 }
-
-.profile-photo-delete {
+.profile-photo-actions{
 	position: absolute;
-	right: 7px;
-	top: 3px;
-	z-index: 2;
-	font-size: 20px;
+	right: 6px;
+	top: 6px;
+	z-index: 2000;
+	display: flex;
+	justify-content: flex-end;
+
+	.btn{
+		position: relative;
+		margin-left: 6px;
+	}
+}
+.profile-photo-delete-icon {
 	color: red;
 }
 
-.profile-photo-btn-root {
-	position: absolute;
-	right: 7px;
-	bottom: 3px;
-	z-index: 2;
-	padding: 0 !important;
-	margin: 0 !important;
-	font-size: 20px;
+.profile-photo-btn-root-icon {
 	color: $brand-success;
-	background: none !important;
-	border: none !important;
-
-	&:hover {
-		color: #fff;
-	}
 }
