--- a/app/javascript/packs/_vars.scss
+++ b/app/javascript/packs/_vars.scss
@@ -9,6 +9,12 @@ $btn-border-radius-large: 30px;
 $padding-large-vertical:    12px !default;
 $padding-large-horizontal:  32px !default;
 
+$padding-small-vertical:    5px !default;
+$padding-small-horizontal:  12px !default;
+
+$padding-xs-vertical:       1px !default;
+$padding-xs-horizontal:     6px !default;
+
 
 $navbar-height: 90px;
 $navbar-inverse-bg: rgba(0, 0, 0, .6);
@@ -21,6 +27,7 @@ $text-muted: #666666;
 $link-color: #0054b9;
 $link-hover-color: lighten($link-color, 15%) !default;
 $font-size-base: 16px;
+$font-size-small: 16px;
 
 
 $brand-success:         #5cb85c !default;
