--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -12,34 +12,33 @@
     href="https://www.tourdom.ru/"
     target="_blank"
     >
-      Турдом
+      <%= image_tag(asset_pack_path('logo-tourdom@2x.png'), size: "203x26", alt: "Турдом") %>
     </a>
     <a
     class="partners-link"
     href="http://www.trn-news.ru/"
     target="_blank"
     >
-      Travel Russian News
+      <%= image_tag(asset_pack_path('logo-trn@2x.png'), size: "128x61", alt: "Travel Russian News") %>
     </a>
     <a
     class="partners-link"
     href="http://www.trn-news.ru/"
     target="_blank"
     >
-      Travel Startups
-      <span>- сообщество тревел предпринимателей</span>
+      <%= image_tag(asset_pack_path('travel-startups.svg'), alt: "Travel Startups - сообщество тревел предпринимателей") %>
+    </a>
+    <a
+    class="partners-link"
+    href="https://sletat.ru/"
+    target="_blank"
+    >
+      <%= image_tag(asset_pack_path('logo-sletat@2x.png'), size: "167x51", alt: "Sletat.ru") %>
     </a>
     <span class="partners-link">
       Владельцы и руководители
       <br>
       туристического бизнеса
     </span>
-    <a
-    class="partners-link"
-    href="https://sletat.ru/"
-    target="_blank"
-    >
-      Sletat.ru
-    </a>
   </div>
 </section>
