--- a/app/javascript/packs/_organizator.scss
+++ b/app/javascript/packs/_organizator.scss
@@ -25,15 +25,10 @@
 
 .partners-link {
 	display: inline-block;
-	margin: 0 16px;
-	font-size: 22px;
+	margin: 0 24px;
+	font-size: 18px;
 	font-weight: bold;
-	line-height: 1.09;
+	line-height: 1.33;
+	text-align: center;
 	color: #000000;
-
-	span {
-		display: block;
-		font-size: 16px;
-		line-height: 1.5;
-	}
 }
